--- a/angular/src/app/@components/card/card.component.scss
+++ b/angular/src/app/@components/card/card.component.scss
@@ -5,8 +5,7 @@
   }
   
   .example-header-image {
-    // background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    // background-size: cover;
+    
     &.high {
         background-color: red;
     }    
@@ -15,6 +14,9 @@
     }    
     &.low {
         background-color: green;
+    }
+    .marked{
+        text-decoration-line:line-through ;
     }    
   }
   
